:sparkles: delete amount field from request
